# KEF-Control

./: .gitignore  LICENSE  PLAN.md  README.md  SECURITY.md  SECURITY_REVIEW.md
.github/: dependabot.yml
.github/workflows/: release.yml
app/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/crates/kef-client/: Cargo.toml
app/crates/kef-client/src/: lib.rs
app/src/: App.tsx  AudioTab.tsx  DeviceTab.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
tools/: build-windows.ps1  kef-auth-test.ps1  kef-capture-proxy.js  kef-discover-settings.ps1  kef-fetch-web.ps1
