[package]
name = "kef-control"
version = "0.1.1"
edition = "2021"
description = "Desktop controller for KEF LS50 Wireless II"

[lib]
name = "kef_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
kef-client = { path = "../crates/kef-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync"] }
